# wasmbind

./: .clang-tidy  .gitignore  CMakeLists.txt  README.emscripten.md  README.md  README.wasi.md  conanfile.py  index.html  package-lock.json  package.json
.github/workflows/: node.js.yml
cmake/: wasmbindConfig.cmake.in
examples/: CMakeLists.txt  any_example.cpp  array_example.cpp  audio.cpp  button.cpp  date_example.cpp  error_example.cpp  function_example.cpp  jsbind_example.cpp  math_example.cpp  object_example.cpp  promise_coroutine_example.cpp  promise_example.cpp  reflect_example.cpp  response_example.cpp  string_example.cpp  url_example.cpp
jsbind/: CMakeLists.txt
jsbind/examples/: CMakeLists.txt  date_example.cpp  function_example.cpp  functions.cpp  math_example.cpp  object_example.cpp  promise_example.cpp  reflect_example.cpp  string_example.cpp  typed_arrays.cpp
jsbind/include/jsbind/: Any.hpp  Array.hpp  ArrayBufferView.hpp  BigInt.hpp  BigIntArray.hpp  Console.hpp  Date.hpp  Error.hpp  Function.hpp  JSON.hpp  Map.hpp  Math.hpp  Null.hpp  Number.hpp  Object.hpp  Promise.hpp  Record.hpp  Reflect.hpp  RegExp.hpp  Response.hpp  Sequence.hpp  Set.hpp  String.hpp  Symbol.hpp  Undefined.hpp  global.hpp  jsbind.hpp  text.hpp  time.hpp  url.hpp  utils.hpp
jsbind/src/: Any.cpp  Array.cpp  BigInt.cpp  BigIntArray.cpp  Date.cpp  Error.cpp  Function.cpp  JSON.cpp  Math.cpp  Null.cpp  Number.cpp  Object.cpp  Promise.cpp  Reflect.cpp  RegExp.cpp  Response.cpp  String.cpp  Symbol.cpp  Undefined.cpp  lib.cpp  text.cpp  time.cpp  url.cpp
scripts/: clean.js  gen.js  globals.js  ignored.js  utils.js
scripts/generators/: base-generator.js  callback-interface-generator.js  dictionary-generator.js  enum-generator.js  interface-generator.js  namespace-generator.js
scripts/parsers/: dependency-resolver.js  spec-parser.js  type-analyzer.js
webbind/: CMakeLists.txt
webbind/cmake/: feature_map.cmake
webbind/examples/: CMakeLists.txt
webbind/include/webbind/: ANGLE_instanced_arrays.hpp  AacEncoderConfig.hpp  AbortController.hpp  AbortSignal.hpp  AbsoluteOrientationSensor.hpp  AbstractRange.hpp  Accelerometer.hpp  AccelerometerSensorOptions.hpp  AdAuctionData.hpp  AdAuctionDataBuyerConfig.hpp  AdAuctionDataConfig.hpp  AdAuctionOneSeller.hpp  AdAuctionPerSellerData.hpp  AdRender.hpp  AddEventListenerOptions.hpp  AddressErrors.hpp  AddressInit.hpp  AeadParams.hpp  AesCbcParams.hpp  AesCtrParams.hpp  AesDerivedKeyParams.hpp  AesGcmParams.hpp  AesKeyAlgorithm.hpp  AesKeyGenParams.hpp  Algorithm.hpp  AllAcceptedCredentialsOptions.hpp  AllowedBluetoothDevice.hpp  AllowedUSBDevice.hpp  AmbientLightSensor.hpp  AnalyserNode.hpp  AnalyserOptions.hpp  Animation.hpp  AnimationEffect.hpp  AnimationEvent.hpp  AnimationEventInit.hpp  AnimationNodeList.hpp  AnimationPlaybackEvent.hpp  AnimationPlaybackEventInit.hpp  AnimationTimeline.hpp  AnimationTrigger.hpp  (+2012 more)
webbind/src/: ANGLE_instanced_arrays.cpp  AacEncoderConfig.cpp  AbortController.cpp  AbortSignal.cpp  AbsoluteOrientationSensor.cpp  AbstractRange.cpp  Accelerometer.cpp  AccelerometerSensorOptions.cpp  AdAuctionData.cpp  AdAuctionDataBuyerConfig.cpp  AdAuctionDataConfig.cpp  AdAuctionOneSeller.cpp  AdAuctionPerSellerData.cpp  AdRender.cpp  AddEventListenerOptions.cpp  AddressErrors.cpp  AddressInit.cpp  AeadParams.cpp  AesCbcParams.cpp  AesCtrParams.cpp  AesDerivedKeyParams.cpp  AesGcmParams.cpp  AesKeyAlgorithm.cpp  AesKeyGenParams.cpp  Algorithm.cpp  AllAcceptedCredentialsOptions.cpp  AllowedBluetoothDevice.cpp  AllowedUSBDevice.cpp  AmbientLightSensor.cpp  AnalyserNode.cpp  AnalyserOptions.cpp  Animation.cpp  AnimationEffect.cpp  AnimationEvent.cpp  AnimationEventInit.cpp  AnimationNodeList.cpp  AnimationPlaybackEvent.cpp  AnimationPlaybackEventInit.cpp  AnimationTimeline.cpp  AnimationTrigger.cpp  (+2011 more)
